# point-clouds-thesis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
pointclouds/: README.md  camera.py  effects.py  intrinsics.json  main.py  models.py  pointpillars.yml  pyproject.toml
pointclouds/output/: blurred.pcd  testing_effects.pcd
scripts/git-hooks/: pre-commit
src/: pc_renderer.cpp
thesis/George_Fakidis__MSc_Thesis__AUEB/: MSc-Thesis.bib  main.tex  presentation.tex  refs.bib
thesis/George_Fakidis__MSc_Thesis__AUEB/content/: 01-introduction.tex  02-related-work.tex  03-system.tex  04-conclusions.tex  04-evaluation.tex  05-conclusions.tex  abstract.tex  acknowledgements.tex  acronym.tex
